--- a/index.html
+++ b/index.html
@@ -40,6 +40,84 @@
     <header>
     </header>
     <main id='root' class="container-md mt-4 mainHeight">
+        <section id='meeting-form-component' class="pt-2">
+            <h1 class="h2 mb-3 pageHeadingText">أضف اجتماع</h1>
+            <ol>
+                <li id='q1' class="h4 my-4">
+                    <p class="m-0"> اختر نوع المعاد </p>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                </li>
+                <li id='q2' class="h4 my-4">
+                    <p class="m-0"> اختر الفرع </p>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                </li>
+                <li id='q3' class="h4 my-4">
+                    <p class="m-0"> اختار الفريق </p>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"> اختارني أنا ! </div>
+                    <div class="h5 fw-normal choice choiceSelected  mt-2 btn btn-primary"
+                        onclick="routeToNewMeeting(this)"> اختارني أنا ! </div>
+                </li>
+            </ol>
+            <div class="h4 fw-normal choice choiceSelected  mt-2 btn btn-primary" onclick="submitForm()"> حفظ </div>
+        </section>
     </main>
     <!-- <button id='signIn' style="display: inline;" onclick="signIn()">signIn</button>
     <button id='signOut' style="display: none;" onclick="signOut()">popup</button> -->
