--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <header>
     </header>
-    <main id='root' class="container-md mt-4 mainHeight">
+    <main id='root' class="container-md mt-4">
     </main>
     <!-- <button id='signIn' style="display: inline;" onclick="signIn()">signIn</button>
     <button id='signOut' style="display: none;" onclick="signOut()">popup</button> -->
