--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
 <body>
     <header>
     </header>
-    <main id='root' class="container-md mt-4 mb-4">
+    <button id="openTeamData" onclick="openTeamData(true)">open menu</button>
+    <section id="closeTeamData" onclick=openTeamData(false) style="transition:all ease-in-out 500ms;background-color: aqua;
+        position: absolute;
+        z-index: 200;
+        top: 0;
+        right: -400px;
+        bottom: 0px;
+        width: 400px !important;">
+    </section>
+    <main id='root' class="container-md mt-4 mb-4" style="transition:all ease-in-out 500ms;">
     </main>
     <!-- <button id='signIn' style="display: inline;" onclick="signIn()">signIn</button>
     <button id='signOut' style="display: none;" onclick="signOut()">popup</button> -->
